# bambutton

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
micro/: api.py  bambuddy_api.py  config.json  config_example.json  config_loader.py  gpio_button.py  led_flasher.py  main.py  periodic_timer.py  wifi.py
printed_parts/: Nut Tool.stl  base.stl  top.stl
scripts/: build_gui.py  push_micro.py  run_main.py
src/: bambuddy_config_gui.py  bambutton_config_gui.py
src/bambuddy_plate_clear_button/: __init__.py  gui.py
src/bambutton/: __init__.py  gui.py
tests/: test_gui.py
