[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[project]
name = "bambuddy-plate-clear-button"
description = "PC setup GUI and MicroPython board code for the Bambuddy Plate Clear Button."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Edward Chamberlain" },
]
dependencies = [
  "esptool==5.2.0",
  "FreeSimpleGUI==5.2.0.post1",
  "mpremote==1.28.0",
]
dynamic = ["version"]

[project.scripts]
bambuddy-plate-clear-button = "bambuddy_plate_clear_button.gui:main"

[project.optional-dependencies]
dev = [
  "build",
  "flake8",
  "hatch-vcs",
  "pyinstaller",
  "pytest",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["src/bambuddy_plate_clear_button"]

[tool.hatch.build.targets.wheel.force-include]
"micro/api.py" = "bambuddy_plate_clear_button/micro/api.py"
"micro/bambuddy_api.py" = "bambuddy_plate_clear_button/micro/bambuddy_api.py"
"micro/config_loader.py" = "bambuddy_plate_clear_button/micro/config_loader.py"
"micro/gpio_button.py" = "bambuddy_plate_clear_button/micro/gpio_button.py"
"micro/led_flasher.py" = "bambuddy_plate_clear_button/micro/led_flasher.py"
"micro/main.py" = "bambuddy_plate_clear_button/micro/main.py"
"micro/wifi.py" = "bambuddy_plate_clear_button/micro/wifi.py"
"micro/config_example.json" = "bambuddy_plate_clear_button/micro/config_example.json"
"firmware" = "bambuddy_plate_clear_button/firmware"

[tool.hatch.build.targets.sdist]
include = [
  "/README.md",
  "/pyproject.toml",
  "/src",
  "/firmware",
  "/scripts",
  "/requirements.txt",
  "/micro/api.py",
  "/micro/bambuddy_api.py",
  "/micro/config_loader.py",
  "/micro/gpio_button.py",
  "/micro/led_flasher.py",
  "/micro/main.py",
  "/micro/wifi.py",
  "/micro/config_example.json",
]
