[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[project]
name = "bambutton"
description = "PC setup GUI and MicroPython board code for the Bambutton."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Edward Chamberlain" },
]
dependencies = [
  "esptool==5.2.0",
  "FreeSimpleGUI==5.2.0.post1",
  "mpremote==1.28.0",
]
dynamic = ["version"]

[project.scripts]
bambutton = "bambutton.gui:main"

[project.optional-dependencies]
dev = [
  "build",
  "flake8",
  "hatch-vcs",
  "pyinstaller",
  "pytest",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["src/bambutton"]

[tool.hatch.build.targets.wheel.force-include]
"micro/api.py" = "bambutton/micro/api.py"
"micro/bambuddy_api.py" = "bambutton/micro/bambuddy_api.py"
"micro/config_loader.py" = "bambutton/micro/config_loader.py"
"micro/gpio_button.py" = "bambutton/micro/gpio_button.py"
"micro/led_flasher.py" = "bambutton/micro/led_flasher.py"
"micro/main.py" = "bambutton/micro/main.py"
"micro/wifi.py" = "bambutton/micro/wifi.py"
"micro/config_example.json" = "bambutton/micro/config_example.json"
"firmware" = "bambutton/firmware"

[tool.hatch.build.targets.sdist]
include = [
  "/README.md",
  "/pyproject.toml",
  "/src",
  "/firmware",
  "/scripts",
  "/requirements.txt",
  "/micro/api.py",
  "/micro/bambuddy_api.py",
  "/micro/config_loader.py",
  "/micro/gpio_button.py",
  "/micro/led_flasher.py",
  "/micro/main.py",
  "/micro/wifi.py",
  "/micro/config_example.json",
]
